--- a/BethanysPieShop/BethanysPieShop/BethanysPieShop.csproj
+++ b/BethanysPieShop/BethanysPieShop/BethanysPieShop.csproj
@@ -22,8 +22,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Tools" Version="1.0.0-preview4-final" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.2"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.1.1"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.2" />
 
 
   </ItemGroup>
